@@ -34,6 +34,7 @@ Changes to Squid-2.4.DEVEL3 ():
 	- no_cache is now a full ACL check without, allowing most ACL types
 	  to be used.
 	- The CONNECT method now obeys miss_access requirements
+	- proxy_auth_regex and ident_regex ACL types
 
 Changes to Squid-2.4.DEVEL2 ():
 
